--- a/client/package.json
+++ b/client/package.json
@@ -76,6 +76,8 @@
 		"@sentry/react": "^7.33.0",
 		"@stripe/react-stripe-js": "^1.4.1",
 		"@stripe/stripe-js": "1.17.1",
+		"@tanstack/react-query": "^4.26.1",
+		"@tanstack/react-query-devtools": "^4.26.1",
 		"@wordpress/a11y": "^3.22.0",
 		"@wordpress/api-fetch": "^6.19.0",
 		"@wordpress/base-styles": "^4.13.0",
@@ -180,7 +182,6 @@
 		"react-intersection-observer": "^9.4.3",
 		"react-live": "^2.3.0",
 		"react-modal": "^3.14.3",
-		"react-query": "^3.32.1",
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^5.1.2",
 		"react-transition-group": "^4.3.0",
